--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BlankFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="137dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Кнопка 1" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/textView5"
+        android:layout_width="399dp"
+        android:layout_height="wrap_content"
+        android:text="Здесь мог быть ваш текст"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="31sp" />
+
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="164dp"
+        android:layout_height="263dp"
+        android:layout_gravity="center_vertical"
+        android:insetLeft="10dp"
+        android:insetTop="200dp"
+        android:text="Кнопка 2"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="165dp"
+        android:layout_height="455dp"
+        android:layout_gravity="center"
+        android:text="Здесь тоже мог быть ваш текст"
+        android:textColor="#9C27B0"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/button15"
+        android:layout_width="120dp"
+        android:layout_height="617dp"
+        android:layout_gravity="end"
+        android:insetTop="500dp"
+        android:insetRight="10dp"
+        android:text="Кнопка 3" />
+
 
 </FrameLayout>
